fix: 修复编译错误问题